Pruned old packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,27 +6,25 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 cycler==0.10.0
-Cython==0.29.21
-decorator==4.0.11
+Cython==0.29.22
+decorator==4.4.2
 future==0.18.2
 huepy==1.2.1
-idna==2.10
-imageio==2.1.2
+idna==3.1
+imageio==2.9.0
 imageio-ffmpeg==0.4.3
 iniconfig==1.1.1
-instabot==0.117.0
-instagram-private-api==1.6.0
-InstagramAPI==1.0.2
 kiwisolver==1.3.1
 matplotlib==3.3.4
 mock==4.0.3
-moviepy==0.2.3.2
-numpy==1.20.0
+moviepy==1.0.3
+numpy==1.20.1
 oauthlib==3.1.0
 opencv-python==4.5.1.48
 packaging==20.9
 pdf2image==1.14.0
 Pillow==8.1.0
+pkg-resources==0.0.0
 pluggy==0.13.1
 proglog==0.1.9
 py==1.10.0
@@ -34,22 +32,20 @@ pycodestyle==2.6.0
 pyee==8.1.0
 pyfiglet==0.8.post1
 pyparsing==2.4.7
-pyppeteer==0.2.5
 PySocks==1.7.1
 pytest==6.2.2
 python-dateutil==2.8.1
-python-twitter==3.5
 pytz==2021.1
 pyzt==1.0.1
-requests==2.11.1
+requests==2.25.1
 requests-oauthlib==1.3.0
-requests-toolbelt==0.7.0
+requests-toolbelt==0.9.1
 responses==0.12.1
 schedule==1.0.0
 six==1.15.0
 termcolor==1.1.0
 toml==0.10.2
-tqdm==4.11.2
+tqdm==4.58.0
 tweepy==3.10.0
 urllib3==1.26.3
 websockets==8.1
