--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "instagram-web-api": "^2.2.2",
-    "tough-cookie-filestore2": "^1.0.0"
+    "tough-cookie-filestore2": "^1.0.0",
+    "useragent-from-seed": "^1.0.1"
   }
 }
