--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,16 @@ chardet==4.0.0
 click==7.1.2
 cycler==0.10.0
 Cython==0.29.22
-decorator==4.4.2
+decorator==4.0.11
+distlib==0.3.1
+filelock==3.0.12
 future==0.18.2
 huepy==1.2.1
-idna==3.1
+idna==2.10
 imageio==2.9.0
 imageio-ffmpeg==0.4.3
 iniconfig==1.1.1
+instabot==0.117.0
 kiwisolver==1.3.1
 matplotlib==3.3.4
 mock==4.0.3
