--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ imageio==2.9.0
 imageio-ffmpeg==0.4.3
 iniconfig==1.1.1
 instabot==0.117.0
+instagrapi==1.6.2
 kiwisolver==1.3.1
 matplotlib==3.3.4
 mock==4.0.3
